# Laplace

./: Contour.py  LICENSE  Laplace.cabal  README.md  RedBlackStencil.hi  RedBlackStencil.hs  RedBlackStencilDiag.hs  RedBlackStencilOpt.hi  RedBlackStencilOpt.hs  SolverGet.hs  SolverOverR.hs  Test.hs  TestDiag.hs  TestSymm.hs  TestSymmOrig.hs  core.txt  newWrapper.hi  newWrapper.hs
