name:                Laplace
version:             0.1.0.0
synopsis:            Numeric solution of Laplace's equation using repa
license:             BSD3
license-file:        LICENSE
author:              Chris Reade
maintainer:          dominic@steinitz.org
copyright:           Chris Reade, Dominic Steinitz
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable Laplace
  main-is:             TestSymmOrig.hs
  other-extensions:    BangPatterns,
                       TemplateHaskell,
                       QuasiQuotes,
                       ScopedTypeVariables,
                       FlexibleInstances
  build-depends:       base >=4.6 && <4.7,
                       pretty >=1.1 && <1.2,
                       prettyclass >=1.0 && <1.1,
                       repa >= 3.2 && < 3.3
  default-language:    Haskell2010